--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.0
+  shared_preferences: ^2.0.11
+  emoji_picker_flutter: ^1.0.8
+
 
 dev_dependencies:
   flutter_test:
