--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.0.0
-  shared_preferences: ^2.0.11
+  shared_preferences: ^2.0.11 
   emoji_picker_flutter: ^1.0.8
+  camera: ^0.9.4+6
+  path_provider: ^2.0.8
+  path: ^1.8.0
 
 
 dev_dependencies:
